# prepare_os_for_address_matching

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml  prompt.md  pyproject.toml  script.py  view_results.py
.github/workflows/: ci.yml  e2e.yml  release-pypi.yml
shell/: test_release_locally.sh
src/ngd_pipeline/: __init__.py  api.py  cli.py  cli_errors.py  extract.py  os_downloads.py  pipeline.py  settings.py  setup_wizard.py  to_flatfile.py
tests/: test_api.py  test_cli.py  test_cli_errors.py  test_extract_source_filtering.py  test_inspect_results.py  test_public_api_integration.py  test_settings.py  test_setup_wizard.py  test_smoke.py
tests/data/: README.md  add_gb_builtaddress.csv  add_gb_builtaddress_altadd.csv  add_gb_historicaddress.csv  add_gb_prebuildaddress.csv  add_gb_royalmailaddress.csv
ukam_os_builder/: __init__.py  cli.py  pipeline.py  setup_wizard.py
ukam_os_builder/api/: api.py  settings.py
ukam_os_builder/data_sources/abp/: split_raw.py
ukam_os_builder/data_sources/abp/transform/: runner.py
ukam_os_builder/data_sources/abp/transform/stages/: combine.py  lpi.py
ukam_os_builder/data_sources/ngd/: to_flatfile.py
ukam_os_builder/os_builder/: extract.py  inspect_results.py  os_hub.py  pipeline_factory.py
